<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Timesheet">
        <menu>
            <item
                android:id="@+id/nav_add_start_end"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/start_end" />
            <item
                android:id="@+id/nav_timesheet_history"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/storico_operazioni" />
        </menu>
    </item>

    <item android:title="Clienti">
        <menu>
            <item
                android:id="@+id/nav_customer"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/clienti" />
            <item
                android:id="@+id/nav_customer_add"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/customer_add" />
        </menu>
    </item>

</menu>
