<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="?android:windowBackground"
             tools:context="com.sviluppo.pierangelo.workreport.Fragment.Customer.CustomerAddFragment"
             android:id="@+id/fragment_add_custo">

    <!-- TODO: Update blank fragment layout -->


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="709dp">

                <TextView
                    android:text="@string/label_add_customer_denominazione"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_add_customer_denominazione"
                    style="@style/label_add_customer"
                    tools:text="Denominazione"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/edit_add_customer_denominazione"
                    style="@style/edit_add_customer"
                    android:inputType="text"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_add_customer_piva"
                    android:text="@string/label_add_customer_piva"
                    style="@style/label_add_customer"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_add_customer_piva"
                    style="@style/edit_add_customer"/>

                <TextView
                    android:text="@string/label_add_customer_codice_fiscale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_add_customer_codfisc"
                    style="@style/label_add_customer"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_add_customer_codice_fiscale"
                    style="@style/edit_add_customer"/>

                <TextView
                    android:text="@string/label_add_customer_indirizzo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_add_customer_indirizzo"
                    style="@style/label_add_customer"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_add_customer_indirizzo"
                    style="@style/edit_add_customer"/>

                <TextView
                    android:text="@string/label_add_customer_numero_civico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_add_customer_civico"
                    style="@style/label_add_customer"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/edit_add_customer_civico"
                    style="@style/edit_add_customer"
                    android:inputType="text"/>

                <TextView
                    android:text="@string/label_add_customer_cap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_add_customer_cap"
                    style="@style/label_add_customer"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/edit_add_customer_cap"
                    style="@style/edit_add_customer"/>

                <TextView
                    android:text="@string/label_add_customer_citta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_add_customer_citta"
                    style="@style/label_add_customer"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/edit_add_customer_citta"
                    style="@style/edit_add_customer"/>

                <TextView
                    android:text="@string/label_add_customer_telefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_add_customer_telefono"
                    style="@style/label_add_customer"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/edit_add_customer_telefono"
                    style="@style/edit_add_customer"/>

                <TextView
                    android:text="@string/label_add_customer_fax"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_add_customer_fax"
                    style="@style/label_add_customer"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/edit_add_customer_fax"
                    style="@style/edit_add_customer"/>

                <TextView
                    android:text="@string/label_add_customer_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_add_customer_email"
                    style="@style/label_add_customer"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/edit_add_customer_email"
                    style="@style/edit_add_customer"/>

                <TextView
                    android:text="@string/label_add_customer_sito_internet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_add_customer_web"
                    style="@style/label_add_customer"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/edit_add_customer_web"
                    style="@style/edit_add_customer"/>

                <Button
                    android:text="@string/aggiungi_cliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnAddCustomer"/>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</FrameLayout>
